--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity
             android:name=".MeaningDisplay"
-            android:label="@string/title_activity_meaning_display" >
+            android:label="@string/title_activity_meaning_display"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".LabelWordList"
@@ -30,8 +31,10 @@
         </activity>
         <activity
             android:name=".HomeScreen"
-            android:label="@string/title_activity_home_screen" >
+            android:label="@string/title_activity_home_screen"
+            android:windowSoftInputMode="adjustPan">
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
